--- a/elyserves/package.json
+++ b/elyserves/package.json
@@ -21,12 +21,14 @@
   },
   "homepage": "https://github.com/saakethtypes/elywalls#readme",
   "dependencies": {
+    "@types/history": "^4.7.5",
     "bcrypt": "^4.0.1",
     "colors": "^1.4.0",
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "history": "^4.10.1",
     "image-size": "^0.8.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
