--- a/elyserves/package.json
+++ b/elyserves/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^5.9.13",
     "mongoose-type-email": "^1.0.12",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.6",
     "nodemon": "^2.0.3",
     "stripe": "^8.52.0",
     "uuid": "^8.0.0"
