--- a/elyreacts/package.json
+++ b/elyreacts/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "node-sass": "^4.14.1",
+    "filepond": "^4.13.7",
+    "filepond-plugin-file-rename": "^1.1.4",
     "history": "^4.10.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-images-upload": "^1.2.8",
     "react-notifications-component": "^2.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
