--- a/elyreacts/package.json
+++ b/elyreacts/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "filepond": "^4.13.7",
     "filepond-plugin-file-rename": "^1.1.4",
     "history": "^4.10.1",
@@ -16,7 +17,8 @@
     "react-images-upload": "^1.2.8",
     "react-notifications-component": "^2.4.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-stripe-checkout": "^2.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
