--- a/elyreacts/package.json
+++ b/elyreacts/package.json
@@ -20,7 +20,8 @@
     "react-notifications-component": "^2.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-stripe-checkout": "^2.6.3"
+    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^6.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
