--- a/elyserves/package.json
+++ b/elyserves/package.json
@@ -38,6 +38,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.3",
+    "path": "^0.12.7",
     "sharp": "^0.25.4",
     "stripe": "^8.52.0",
     "uuid": "^8.0.0"
