--- a/elyreacts/package.json
+++ b/elyreacts/package.json
@@ -26,7 +26,7 @@
     "react-toastify": "^6.0.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3030 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5050"
 }
