--- a/elyserves/package.json
+++ b/elyserves/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js",
-    "client": "cd ../elyreacts && npm start",
+    "client": "cd ../elyreacts/build && npm start",
     "dev": "concurrently \" npm run server \" \" npm run client\" ",
     "client-install": "npm install --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1"
